Fixed navbar height on smaller screens

--- a/src/css/_navbar.scss
+++ b/src/css/_navbar.scss
@@ -70,6 +70,7 @@ nav {
 	transform-origin: left;
 	transition: transform 400ms ease-in-out;
 	overflow: scroll;
+	padding-bottom: $navbar-height;
 
 	ul {
 		margin: 0;
